--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 	    		<div class="subnav-content"> 
 					<a class="navbarlink" href="progetti/oca.html">Gioco dell'Oca</a> 
 					<a class="navbarlink" href="progetti/guida.html">Guida alla Frontiera Galattica</a> 
-					<a class="navbarlink" href="progetti/ammo2.html">Ammo2</a>
+					<a class="navbarlink" href="progetti/tales.html">Tales of Blades and Heroes</a>
 					<a class="navbarlink" href="progetti/rune.html">Rune</a>
 				</div>
       		</div>
@@ -60,11 +60,12 @@
 			  <h1>Che cos'è Fulcrum? </h1>
 			</div>
 		  <div class="fulcrumsheet">
-				<img src="images/logo 200x200.jpg" alt="">
+				<img src="images/logo 200x200.jpg" alt="" id="fulcrumlogo">
 				<div class="aboutcontentright">
 				  <h3> Fulcrum Associazione Culturale</h3>
 				  <p>nasce dalla volontà di alcune persone di fare confluire esperienze e abilità personali nei campi dell’editoria, del gioco e dell’arte, promuovendo la creatività degli individui e dei gruppi di lavoro.<br>
-				    E’ composta da professionisti che, da anni, sono coinvolti nel mondo della cultura in Italia e all’estero.<br>
+				    Fulcrum ha sede nella provincia di Bologna e sebbene operi su tutto il territorio nazionale partecipando a fiere ed eventi, specialmente per quanto riguarda il campo artistico, ha la sua territorialità nel bolognese e nel ferrarese.<br>
+				    L'associazione è composta da professionisti che, da anni, sono coinvolti nel mondo della cultura in Italia e all’estero.<br>
 				    Fulcrum si forma con lo scopo di creare e gestire una rete di servizi volti allo sviluppo, realizzazione, pubblicazione e pubblicizzazione di progetti editoriali, ludici e artistici individuali o di gruppo. Per ulteriori informazioni vi rimandiamo alle Domande Frequenti e alla pagina dei Servizi. </p>
 				</div>
 			</div>
