--- a/faq.html
+++ b/faq.html
@@ -44,7 +44,7 @@
 	    		<div class="subnav-content"> 
 					<a class="navbarlink" href="progetti/oca.html">Gioco dell'Oca</a> 
 					<a class="navbarlink" href="progetti/guida.html">Guida alla Frontiera Galattica</a> 
-					<a class="navbarlink" href="progetti/ammo2.html">Ammo2</a>
+					<a class="navbarlink" href="progetti/tales.html">Tales of Blades and Heroes</a>
 					<a class="navbarlink" href="progetti/rune.html">Rune</a>
 				</div>
       		</div>
@@ -85,6 +85,10 @@
 				<div class="domanda">
 				  <h2>Accettate fumetti?</h2>
 				  <p>Siamo in grado di impaginare, editare, produrre e distribuire anche prodotti di fumettistica. </p>
+				</div>
+				<div class="domanda">
+				  <h2>Devo iscrivermi all'associazione per lavorare con voi?</h2>
+				  <p>Non necessariamente, sarà sufficiente stilare un contratto di collaborazione.</p>
 				</div>
 			</div>
 		</section>
