--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
 	    		<div class="subnav-content"> 
 					<a class="navbarlink" href="progetti/oca.html">Gioco dell'Oca</a> 
 					<a class="navbarlink" href="progetti/guida.html">Guida alla Frontiera Galattica</a> 
-					<a class="navbarlink" href="progetti/ammo2.html">Ammo2</a>
 					<a class="navbarlink" href="progetti/rune.html">Rune</a>
 					<a class="navbarlink" href="progetti/tales.html">Tales of Blades and Heroes</a>
  				</div>
@@ -72,7 +71,7 @@
   				<li><a href="/progetti/guida.html"><img src="images/banners/Guida1100x300.jpg"  alt="Guida alla Frontiera Galattica - I viaggi della nave Onyx"></a></li>
   				<li><a href="/progetti/rune.html"><img src="images/banners/Rune1100x300.jpg" alt="Rune - La rinascita della prestigiosa rivista sul GDR"></a></li>
 				<li><a href="/progetti/oca.html"><img src="images/banners/Oca1100x300.jpg" alt="Gioco dell'Oca - Un classico riprodotto da Fulcrum in chiave artistica"></a></li>
-				<li><a href="/progetti/tales.html"><img src="images/tales/tales1100x300.jpg" alt="Tales of Blades and Heroes - La versione italiana"></a></li>
+				<li><a href="/progetti/tales.html"><img src="images/banners/Tales1100x300.jpg" alt="Tales of Blades and Heroes GDR - La versione italiana"></a></li>
 			</ul>
 	</section>	
   <!-- About Section -->
@@ -91,7 +90,7 @@
           <article class="newsarticle"> <img src="images/banners/Oca250x125.jpg" alt="" class="newsimage">
             <p class="newstext">Gioco dell'Oca - Il grande classico del gioco dell'oca, tinto dall'Arte e dalla Mistica di Anna Bergamini</p>
           </article>
-		  <article class="newsarticle"> <img src="images/tales/tales250x125.jpg" alt="" class="newsimage">
+		  <article class="newsarticle"> <img src="images/banners/Tales250x125.jpg" alt="" class="newsimage">
             <p class="newstext">Tales of Blades and Heroes - La localizzazione in lingua italiana di uno dei giochi di Ganesha Games</p>
           </article>
         </div>	    	
