--- a/progetti/Tales.html
+++ b/progetti/Tales.html
@@ -44,7 +44,7 @@
 	    		<div class="subnav-content"> 
 					<a class="navbarlink" href="oca.html">Gioco dell'Oca</a> 
 					<a class="navbarlink" href="guida.html">Guida alla Frontiera Galattica</a> 
-					<a class="navbarlink" href="ammo2.html">Ammo2</a>
+					<a class="navbarlink" href="tales.html">Tales of Blades and Heroes</a>
 					<a class="navbarlink" href="rune.html">Rune</a>
 				</div>
       		</div>
@@ -58,23 +58,23 @@
 		
 		<section class="project">
 			<!-- InstanceBeginEditable name="banner" -->
-            <div class="projbannerbig"><img src="/images/tales/tales1100x300.jpg" alt=""></div>	
+            <div class="projbannerbig"><img src="../images/banners/Tales1100x300.jpg" alt=""></div>	
 			<!-- InstanceEndEditable -->
 		  	<div class="projectbox">
 		  		<div class="contentbox">
-		  	    	<h1 class="title">
+		  	    	<h1>
 		  	      	<!-- InstanceBeginEditable name="title" -->
 		  	        	Tales of Blades and Heroes - Gioco di Ruolo
 	  	          	<!-- InstanceEndEditable -->
 		  	      	</h1>
 		  	    	<!-- InstanceBeginEditable name="content" -->
-		  	    	<p class="content"> Come primo progetto di localizzazione di Fulcrum, siamo deliziati di poter portare in Italia un gioco di un autore italiano, Andrea Sfiligoi, fondatore di Ganesha Games. Tales of Blades and Heroes è un sistema di regole leggere ed immediate, basato sul famoso gioco di combattimento con miniature, sempre prodotto da Ganesha, Song of Blades and Heroes. </p>
-					<div class="imgflow"><img src="../images/tales/taleswar.jpg" alt=""><p class="content">Il manuale offre tutto quello che è necessario per giocare, in 180 pagine formato tascabile o cartonato di lusso. Per la versione italiana verranno realizzati una nuova veste grafica e nuovi disegni.</p></div>
-		  	    	<p class="content">Il manuale offre tutto quello che è necessario per giocare, in 180 pagine formato tascabile o cartonato di lusso. Per la versione italiana verranno realizzati una nuova veste grafica e nuovi disegni.</p>
+		  	    	<p> Come primo progetto di localizzazione di Fulcrum, siamo deliziati di poter portare in Italia un gioco di un autore italiano, Andrea Sfiligoi, fondatore di Ganesha Games. Tales of Blades and Heroes è un sistema di regole leggere ed immediate, basato sul famoso gioco di combattimento con miniature, sempre prodotto da Ganesha, Song of Blades and Heroes. </p>
+					<div class="imgflow"><img src="../images/tales/taleswar.jpg" alt="">
+					<p>Il manuale offre tutto quello che è necessario per giocare, in 180 pagine formato tascabile o cartonato di lusso. Per la versione italiana verranno realizzati una nuova veste grafica e nuovi disegni.</p></div>
 		  	    	<div class="imgflow">
-		  	    	  <p class="content">L'ambientazione proposta da Tales ammicca ai giochi della scuola di vecchio stampo, come le prime edizioni di Dungeons and Dragons. Il sistema utilizza, per le azioni mondane, un numero ridotto di statistiche e si basa sul D6, la magia, invece utilizza una è strutturata su Verbi e Nomi, concedendo ai giocatori una libertà &nbsp;sulla creazione dei loro incantesimi.</p>
+		  	    	  <p>L'ambientazione proposta da Tales ammicca ai giochi della scuola di vecchio stampo, come le prime edizioni di Dungeons and Dragons. Il sistema utilizza, per le azioni mondane, un numero ridotto di statistiche e si basa sul D6, la magia, invece utilizza una è strutturata su Verbi e Nomi, concedendo ai giocatori una libertà &nbsp;sulla creazione dei loro incantesimi.</p>
 	  	    	    <img src="../images/tales/sparks.jpg" alt=""></div>
-		  	    	<p class="content"> La presentazione di Tales of Blades and Heroes GDR avverrà a Modena Play 2019. </p>
+		  	    	<p> La presentazione di Tales of Blades and Heroes GDR avverrà a Modena Play 2019. </p>
 		  	    	<!-- InstanceEndEditable -->
 		  	    </div>
 				<div class="sidebar">
