--- a/progetti/guida.html
+++ b/progetti/guida.html
@@ -44,7 +44,7 @@
 	    		<div class="subnav-content"> 
 					<a class="navbarlink" href="oca.html">Gioco dell'Oca</a> 
 					<a class="navbarlink" href="guida.html">Guida alla Frontiera Galattica</a> 
-					<a class="navbarlink" href="ammo2.html">Ammo2</a>
+					<a class="navbarlink" href="tales.html">Tales of Blades and Heroes</a>
 					<a class="navbarlink" href="rune.html">Rune</a>
 				</div>
       		</div>
@@ -62,32 +62,41 @@
 			<!-- InstanceEndEditable -->
 		  	<div class="projectbox">
 		  		<div class="contentbox">
-		  	    	<h1 class="title">
+		  	    	<h1>
 		  	      	<!-- InstanceBeginEditable name="title" -->
 		  	        	Guida alla Frontiera Galattica - Gioco di Ruolo
 	  	          	<!-- InstanceEndEditable -->
 		  	      	</h1>
 		  	    	<!-- InstanceBeginEditable name="content" -->
-		  	    	<p class="content"> Basato sul libro "Tourist's Guide to the Galactic Frontier" scritto dal romanziere Giorgio Sangiorgi e illustrato dall'artista Luca Oleastri, Fulcrum produrrà, in colaborazione con Edizioni Scudo, il Gioco di Ruolo di Guida alla Frontiera Galattica. Dotato di una meccanica esclusiva, ideata da Mirko Pellicioni, il gioco è un'immersione nel mondo immaginato da Sangiorgi: più di 40 mondi alieni situati alla perfieria della Via Lattea attendono i giocatori. Ogni pianeta sarà descritto nel dettaglio, con una mappa delle aree di interesse e tavole a colori che illustrano le peculiarità di ogni luogo. <br>
-	  	    	    </p>
-		  	    	<p class="content">Il manuale suggerisce una trama di partenza: Interpretare l'equipaggio della nave spaziale Onyx dell'Impero Hakmlet, bloccata alla Frontiera Galattica durante una missione esplorativa e costretta a cercare una rotta inedita verso casa. Con il materiale proposto potrete, inoltre, giocare altri scenari, come il punto di vista degli alieni, nemici dell'Impero. Al sistema di gioco dedicato, affiancheremo anche i dettagli per adattare l'ambientazione ad altri importanti sistemi di gioco. <br>
-	  	    	    </p>
-		  	    	<p class="content">Il progetto è in fase avanzata di sviluppo, con il Kickstarter in arrivo per il primo quadrimestre del 2019. In antemprima abbiamo messo un po' di materiale prelevato direttamente dal manuale. E' prevista una pubblicazione in lingua italiana e una in lingua inglese. L'uscita è prevista per il primo quadrimestre del 2020.</p>
-		  	    	<!-- InstanceEndEditable -->
+<p> Basato sul libro "Tourist's Guide to the Galactic Frontier" scritto dal romanziere Giorgio Sangiorgi e illustrato dall'artista Luca Oleastri, Fulcrum produrrà, in colaborazione con Edizioni Scudo, il Gioco di Ruolo di Guida alla Frontiera Galattica. Dotato di una meccanica esclusiva, sviluppata da Mirko Pellicioni, il gioco è un'immersione nel mondo immaginato da Sangiorgi: più di 40 mondi alieni situati alla periferia della Via Lattea attendono i giocatori. <br>
+</p>
+					<div class="imgflow">
+					  <p>Ogni pianeta sarà descritto nel dettaglio, con una mappa delle aree di interesse e tavole a colori che illustrano le peculiarità di ogni luogo. L'intenzione è di ricreare quelle atmosfere tipiche della fantascienza classica, dove l'uomo è al centro dell'esplorazione di un universo ignoto.</p>
+				    <img src="../images/guida/guida1.jpg" alt=""></div>
+<p>Il manuale suggerisce una trama di partenza: Interpretare l'equipaggio della nave spaziale Onyx dell'Impero Hakmlet, bloccata alla Frontiera Galattica durante una missione esplorativa e costretta a cercare una rotta inedita verso casa. Con il materiale proposto potrete, inoltre, giocare altri scenari, come il punto di vista degli alieni, nemici dell'Impero. Al sistema di gioco dedicato, affiancheremo anche i dettagli per adattare l'ambientazione ad altri importanti sistemi di gioco. <br>
+   	      </p>
+					<div class="imgflow centerimg"><img src="../images/guida/guida2.jpg" alt=""></div>
+<p>Il progetto è in fase avanzata di sviluppo, con il Kickstarter in arrivo nel 2019. In antemprima abbiamo messo un po' di materiale prelevato direttamente dal manuale. E' prevista una pubblicazione in lingua italiana e una in lingua inglese. L'uscita è prevista per il primo quadrimestre del 2020.</p>
+					<div class="links">
+						<div class="externallink"><a href="http://innovari.wixsite.com/edizioniscudo"><i class="fas fa-link"></i></a><p>Edizioni Scudo</p></div>
+						<div class="facebooklink"><a href="https://www.facebook.com/groups/94478123017/"><i class="fab fa-facebook-square"></i></a><p>Edizioni Scudo</p></div>
+						<div class="facebooklink"><a href="https://www.facebook.com/GalacticFrontierRPG/"><i class="fab fa-facebook-square"></i></a><p>Galactic Frontier RPG</p></div>						
+					</div>
+	  	    	  <!-- InstanceEndEditable -->
 		  	    </div>
 				<div class="sidebar">
-                  	<div class="flag">
+               	  <div class="flag">
                   	  <p> <em class="fas fa-bullhorn"></em> Notizie </p>
                   	</div>
 					<section class="news">
 						<!-- InstanceBeginEditable name="news" -->
 						<div class="newstop">
-						  <time class="newsdate">01/01/2019</time>
-						  <h3>Project Title</h3>
+						  <time class="newsdate">18/02/2019</time>
+						  <h3>Guida alla Frontiera Galattica</h3>
 					    </div>                        
-						<img src="../images/banners/Guida250x125.jpg">						
-						<h4>News Title</h4>
-					    <p>Lorem ipsum</p>
+						<img src="../images/banners/Guida250x125.jpg">
+						<h4>Annuncio Progetto </h4>
+						<p>I dettagli sul primo GDR prodotto interamente da Fulcrum, in collaborazione con Edizioni Scudo.</p>
 						<!-- InstanceEndEditable -->
 					</section>
 				</div>
