--- a/progetti/rune.html
+++ b/progetti/rune.html
@@ -44,7 +44,7 @@
 	    		<div class="subnav-content"> 
 					<a class="navbarlink" href="oca.html">Gioco dell'Oca</a> 
 					<a class="navbarlink" href="guida.html">Guida alla Frontiera Galattica</a> 
-					<a class="navbarlink" href="ammo2.html">Ammo2</a>
+					<a class="navbarlink" href="tales.html">Tales of Blades and Heroes</a>
 					<a class="navbarlink" href="rune.html">Rune</a>
 				</div>
       		</div>
@@ -62,15 +62,20 @@
 			<!-- InstanceEndEditable -->
 		  	<div class="projectbox">
 		  		<div class="contentbox">
-		  	    	<h1 class="title">
+		  	    	<h1>
 		  	      	<!-- InstanceBeginEditable name="title" -->
 		  	        	Rune
 	  	          	<!-- InstanceEndEditable -->
 		  	      	</h1>
 		  	    	<!-- InstanceBeginEditable name="content" -->
 		  	    	<p class="content"> Rune è una rivista scritta da giocatori per giocatori, redatta da Edizioni Scudo in collaborazione con Fulcrum e due dei fondatori della prestigiosa testata originale, Ciro Alessandro Sacco, che ne fu Direttore Grafico e Danilo Moretti, che ne fu Direttore Editoriale. Rune si imposta principalmente come rivista di contenuti per giocatori di ruolo, riprendendo il "grande formato" editoriale, verrà distribuita sia in versione Print-On-Demand a colori brossurata, sia in versione e-book. </p>
-		  	    	<p class="content">Si è pensato che, essendo recensioni e altro materiale dimostrativo largamente disponibile, sia in altre pubblicazioni, sia online, Rune debba concentrarsi, per quanto riguarda gli articoli di approfondimento, su un punto di vista di "laterale", ossia sulla storia del GDR e dei suoi corollari e su articoli scritti direttamente dagli autori dei giochi. Il vero punto di forza di Rune, invece, saranno i materiali di gioco, che comporranno una parte consistente dei contenuti della rivista: avventure, spunti di gioco, ambientazioni ecc... saranno il sale delle pubblicazioni. </p>
-		  	    	<p class="content">Il numero 0 di Rune è previsto per Modena Play 2019.</p>
+		  	    	<p class="content">Si è pensato che, essendo recensioni e altro materiale dimostrativo largamente disponibile, sia in altre pubblicazioni, sia online, Rune debba concentrarsi, per quanto riguarda gli articoli di approfondimento, su un punto di vista "laterale", ossia sulla storia del GDR e dei suoi corollari e su articoli scritti direttamente dagli autori dei giochi. Il vero punto di forza di Rune, invece, saranno i materiali di gioco, che comporranno una parte consistente dei contenuti della rivista: avventure, spunti di gioco, ambientazioni ecc... saranno il sale delle pubblicazioni. </p>
+		  	    	<p class="content">Il numero 0 di Rune è previsto per Modena Play 2019. </p>
+		  	    	<div class="links">
+						<div class="externallink"><a href="http://innovari.wixsite.com/edizioniscudo"><i class="fas fa-link"></i></a><p>Edizioni Scudo</p></div>
+						<div class="facebooklink"><a href="https://www.facebook.com/groups/94478123017/"><i class="fab fa-facebook-square"></i></a><p>Edizioni Scudo</p></div>
+						<div class="facebooklink"><a href="https://www.facebook.com/groups/runerivista/"><i class="fab fa-facebook-square"></i></a><p>Rune Rivista</p></div>						
+					</div>
 		  	    	<!-- InstanceEndEditable -->
 		  	    </div>
 				<div class="sidebar">
