--- a/servizi.html
+++ b/servizi.html
@@ -44,7 +44,7 @@
 	    		<div class="subnav-content"> 
 					<a class="navbarlink" href="progetti/oca.html">Gioco dell'Oca</a> 
 					<a class="navbarlink" href="progetti/guida.html">Guida alla Frontiera Galattica</a> 
-					<a class="navbarlink" href="progetti/ammo2.html">Ammo2</a>
+					<a class="navbarlink" href="progetti/tales.html">Tales of Blades and Heroes</a>
 					<a class="navbarlink" href="progetti/rune.html">Rune</a>
 				</div>
       		</div>
@@ -66,9 +66,9 @@
 				  <h2>Ricerca di Fondi:</h2>
 				  <p>Come Associazione Culturale, Fulcrum ha la possibilità di accedere a fondi di origine pubblica destinati ad attività artistiche e associazioni culturali. Il metodo principale, invece, per recuperare fondi per singoli progetti, sarà il <em>crowdfunding </em>attraverso la rete, ossia l'avvalersi di tutte quelle nuove piattaforme che permettono a un progetto di finanziarsi attraverso il sostegno di singoli privati, che, per un motivo o per quell'altro, credono nella realizzazione del progetto.</p>
 				  <h2>Produzione:</h2>
-				  <p>Fulcrum può produrre materiale edioriale e/o artistico, assistendo l'autore in tutte le fasi della produzione: impostazione di prodotto, design, realizzazione grafica, impaginazione e packaging. </p>
+				  <p>Fulcrum può produrre materiale editoriale e/o artistico, assistendo l'autore in tutte le fasi della produzione: impostazione di prodotto, design, realizzazione grafica, impaginazione e packaging. </p>
 				  <h2>Distribuzione:</h2>
-				  <p>Abbiamo la possibilità di distribuire attraverso canali interni ed esterni in Italia e attraverso canali esterni in Europa. I nostri collaboratori hanno canali importanti per quanto riguarda il settore ludico e quello editoriale e stiamo sviluppando una rete di collaborazioni nel campo dell'arte in grado di supportare il lavoro propostoci.</p>
+				  <p>Abbiamo la possibilità di distribuire attraverso canali interni ed esterni in Italia e attraverso canali esterni in Europa. I nostri collaboratori possiedono contatti importanti per quanto riguarda il settore ludico e quello editoriale e stiamo sviluppando una rete di collaborazioni nel campo artistico, in grado di supportare i progetti che ci vengono proposti.</p>
 				  <h2>Connettività:</h2>
 				  <p>Fulcrum nasce come associazione culturale per creare una rete di connessioni fra individui con competenze differenti, in grado di fare fronte alle esigenze progettuali che mano a mano ci vengono proposte. L'altro aspetto che viene esaltato da una rete di connessioni di questo tipo è la capacità di fare fluire rapidamente informazioni sui progetti ad altri individui potenzialmente interessati.</p>
 				</div>
