--- a/progetti/ammo2.html
+++ b/progetti/ammo2.html
@@ -44,7 +44,7 @@
 	    		<div class="subnav-content"> 
 					<a class="navbarlink" href="oca.html">Gioco dell'Oca</a> 
 					<a class="navbarlink" href="guida.html">Guida alla Frontiera Galattica</a> 
-					<a class="navbarlink" href="ammo2.html">Ammo2</a>
+					<a class="navbarlink" href="tales.html">Tales of Blades and Heroes</a>
 					<a class="navbarlink" href="rune.html">Rune</a>
 				</div>
       		</div>
@@ -62,7 +62,7 @@
 			<!-- InstanceEndEditable -->
 		  	<div class="projectbox">
 		  		<div class="contentbox">
-		  	    	<h1 class="title">
+		  	    	<h1>
 		  	      	<!-- InstanceBeginEditable name="title" -->
 		  	        	Titolo
 	  	          	<!-- InstanceEndEditable -->
