--- a/progetti/Tales.html
+++ b/progetti/Tales.html
@@ -82,16 +82,14 @@
                   	  <p> <em class="fas fa-bullhorn"></em> Notizie </p>
                   	</div>
 					<section class="news">
-						<!-- InstanceBeginEditable name="news" -->
 						<div class="newstop">
-						  <time class="newsdate">01/01/2019</time>
-						  <h3>Project Title</h3>
-					    </div>
-                        <div>
-							<img src="../images/315x150.png"></div>
-							<h4>News Title</h4>
-					    	<p>Lorem ipsum</p>
-						<!-- InstanceEndEditable -->
+						  <time class="newsdate">18/02/2019</time>
+						  <h3>Guida alla Frontiera Galattica</h3>
+					    </div>                        
+						<img src="../images/banners/Guida250x125.jpg">
+						<h4>Annuncio Progetto </h4>
+						<p>Potete leggere i dettagli sul primo GDR prodotto interamente da Fulcrum, in collaborazione con Edizioni Scudo.</p>	
+						<div class="divider"></div>
 					</section>
 				</div>
 	  		</div>
