--- a/progetti/guida.html
+++ b/progetti/guida.html
@@ -85,19 +85,19 @@
 	  	    	  <!-- InstanceEndEditable -->
 		  	    </div>
 				<div class="sidebar">
-               	  <div class="flag">
+                  	<div class="flag">
                   	  <p> <em class="fas fa-bullhorn"></em> Notizie </p>
                   	</div>
 					<section class="news">
-						<!-- InstanceBeginEditable name="news" -->
 						<div class="newstop">
 						  <time class="newsdate">18/02/2019</time>
 						  <h3>Guida alla Frontiera Galattica</h3>
 					    </div>                        
 						<img src="../images/banners/Guida250x125.jpg">
 						<h4>Annuncio Progetto </h4>
-						<p>I dettagli sul primo GDR prodotto interamente da Fulcrum, in collaborazione con Edizioni Scudo.</p>
-						<!-- InstanceEndEditable -->
+						<p>Potete leggere i dettagli sul primo GDR prodotto interamente da Fulcrum, in collaborazione con Edizioni Scudo.</p>
+						<div class="divider"></div>
+						<hr>
 					</section>
 				</div>
 	  		</div>
